# @file
# 
# Simply descend to subdirectories
#
# @author Blasius Czink

ADD_DEFINITIONS(-DHAVE_COVISE)

if (NOT COVISE_USE_VIRVO)
   ADD_DEFINITIONS(-DWITHOUT_VIRVO)
endif()

if (NOT COVISE_BUILD_ONLY_FILE AND NOT COVISE_BUILD_ONLY_ODDLOT AND NOT COVISE_BUILD_VRB_ONLY)
    ADD_SUBDIRECTORY(3rdparty)
endif()
ADD_SUBDIRECTORY(kernel)

IF(COVISE_BUILD_SYS)
  ADD_SUBDIRECTORY(sys)
ENDIF()

if(NOT COVISE_BUILD_VRB_ONLY)
  if (NOT XERCESC_FOUND OR COVISE_BUILD_ONLY_FILE)
    return()
  endif()

  IF (NOT COVISE_BUILD_ONLY_COVER AND NOT COVISE_BUILD_ONLY_ODDLOT)
    ADD_SUBDIRECTORY(tools)
  ENDIF()

  IF(COVISE_BUILD_MODULES AND NOT COVISE_BUILD_ONLY_COVER AND NOT COVISE_BUILD_ONLY_ODDLOT)
    ADD_SUBDIRECTORY(module)
  ENDIF()

  if (COVISE_OPENCOVER_INTERNAL_PROJECT AND NOT COVISE_BUILD_ONLY_ODDLOT
          AND (COVISE_BUILD_COVER OR COVISE_BUILD_ONLY_COVER))
      add_subdirectory(OpenCOVER)
  endif()

  if (COVISE_BUILD_ONLY_ODDLOT OR NOT COVISE_BUILD_ONLY_COVER)
      add_subdirectory(oddlot)
  endif()
endif()
